--- a/web-server/public/views/about.hbs
+++ b/web-server/public/views/about.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,6 +5,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>about page</h1>
+    <h1>{{title}}</h1>
+    <h1>{{name}}</h1>
   </body>
 </html>
