--- a/web-server/public/views/index.hbs
+++ b/web-server/public/views/index.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -22,6 +21,7 @@
         <div class="longi-lati">
           <p class="longitude"></p>
           <p class="latitude"></p>
+          <p>Muellim 100 den cox request atmisam , api islemiyecek</p>
         </div>
         <p class="forecast"></p>
       </div>
